--- a/templates/buttons.pug
+++ b/templates/buttons.pug
@@ -1,19 +1,4 @@
 extends layout.pug
 
 block content
-
-  form
-    button(type="button" data-key="49") 1
-    button(type="button" data-key="50") 2
-    button(type="button" data-key="51") 3
-    br
-    button(type="button" data-key="52") 4
-    button(type="button" data-key="53") 5
-    button(type="button" data-key="54") 6
-    br
-    button(type="button" data-key="55") 7
-    button(type="button" data-key="56") 8
-    button(type="button" data-key="57") 9
-    br
-    button(type="button" data-key="48") 0
-    button(type="button" data-key="8" class="Delete") Delete
+  include ./includes/keypad.pug
